#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(projectname, 1.0.0, susidian@163.com)
AC_CONFIG_SRCDIR([common])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE(projectname, 1.0.0)
AC_PROG_LIBTOOL
# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET


# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_CHECK_FUNCS([atexit memset])

AC_CONFIG_FILES([Makefile
				 common/Makefile
				 common/project_name/Makefile
				 common/util/Makefile
				 common/main/Makefile])
AC_OUTPUT
