#AM_CPPFLAGS=-Wall -g -D_FILE_OFFSET_BITS=64 -I$(top_srcdir)/src -I/usr/local/include 
INCLUDES = -I$(top_srcdir)/common
noinst_LIBRARIES = libutil.a

libutil_a_SOURCES = FcgiRequest.h     \
                    FcgiRequest.cpp   \
                    FcgiThread.h      \
                    FcgiThread.cpp    \
                    FcgiServer.h      \
                    FcgiServer.cpp
